<resources>
    <string name="app_name">Project Allocator</string>
    <string name="title_activity_student_profile_fragment">StudentProfileFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="facultyprofile">Faculty Profile</string>
    <string name="viewrequest">View Request</string>
    <string name="enterlimit">Enter Limit</string>
    <string name="createProject">"Create Project"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="confirm_edit_stuprofile">Confirm Edit</string>
    <string name="cancel">Cancel</string>
    <string name="enter_new_phonenumber">Enter New Phonenumber</string>
    <string name="enter_rollnumber_of_member">Enter Rollnumber of member</string>
    <string name="select_number_of_members">Select Number Of Members</string>
    <string name="add_faculty_project">Add Project</string>
    <string name="area_request">Area of Expertise</string>
    <string name="accept">Accept Request</string>
    <string name="reject">Reject Request</string>
    <string name="project_list">Project List</string>
    <string name="enter_brief_description">Enter brief description</string>
    <string name="brief_description">Brief Description:</string>
    <string name="enter_topic_here">Enter topic here</string>
    <string name="topic_name">Topic Name:</string>
    <string name="select_area_of_interest">Select Area of Interest:</string>
    <string name="select_faculty_preference">Select Faculty Preference:</string>
    <string name="plus_sign">+</string>
    <string name="place_request">Place Request</string>
    <string name="edit">Edit</string>
    <string name="edit_fields">Edit Fields</string>
    <string name="log_out">Log Out</string>
    <string name="abc_xyz_com">abc@xyz.com</string>
    <string name="email1">Email:</string>
    <string name="hashed">#########</string>
    <string name="limit">Limit:</string>
    <string name="hashed1">#########</string>
    <string name="phone_number1">Phone Number:</string>
    <string name="name">Name</string>
    <string name="name_fac">Name:</string>
    <string name="forgot_password" />
    <string name="sign_in" />
    <string name="password" />
    <string name="Email" />
</resources>
